<resources>
    <string name="APPLICATION_NAME">Sms Alarm</string>
    <string name="APPLICATION_VERSION">2.3.1beta</string>
    <string name="APPLICATION_BUILD">20150908</string>
    <string name="ABOUT">About Sms Alarm</string>
    <string name="ABOUT_BUILD">Build: %s</string>
    <string name="ABOUT_CONTACT">For questions, send an email to:\nsmsalarm@outlook.com</string>
    <string name="ABOUT_COPYRIGHT">&#169;Copyright Robert Nyholm</string>
    <string name="ABOUT_RIGHTS_RESERVED">All rights reserved</string>
    <string name="ABOUT_THIS_APPLICATION">This application is developed and distributed in the hope that it will be of use, but without any warranty that it will function as intended in all situations.</string>
    <string name="ABOUT_VERSION">Version: %s</string>
    <string name="ACKNOWLEDGE">Acknowledge Alarm</string>
    <string name="ACKNOWLEDGE_LINE_BUSY">Line busy, will call back in:</string>
    <string name="ACKNOWLEDGE_MESSAGE_DIALOG_HINT">Message..</string>
    <string name="ACKNOWLEDGE_MESSAGE_DIALOG_MESSAGE">Enter a message that Sms Alarm acknowledges with.</string>
    <string name="ACKNOWLEDGE_MESSAGE_DIALOG_TITLE">Enter message</string>
    <string name="ACKNOWLEDGE_PHONE_NUMBER_DIALOG_MESSAGE">Enter a phone number that Sms Alarm acknowledges to.</string>
    <string name="ACKNOWLEDGE_SMS_ERROR_AIRPLANE_MODE">The device is in flight mode.</string>
    <string name="ACKNOWLEDGE_SMS_ERROR_GENERIC">An unexpected error has occurred.</string>
    <string name="ACKNOWLEDGE_SMS_ERROR_NO_SERVICE">The device has no service.</string>
    <string name="ADD">Add</string>
    <string name="ADD_FREE_TEXT_DIALOG_TITLE">Add word</string>
    <string name="ADD_FREE_TEXT_HINT">Add word..</string>
    <string name="ADD_PHONE_NUMBER_DIALOG_TITLE">Add phone number</string>
    <string name="ADD_PHONE_NUMBER_HINT">Add a phone number..</string>
    <string name="ADD_PRIMARY_FREE_TEXT_DIALOG_MESSAGE">Enter a word which Sms Alarm will trigger primary alarm on, if present in the received SMS.</string>
    <string name="ADD_PRIMARY_PHONE_NUMBER_DIALOG_MESSAGE">Enter a phone number which Sms Alarm will trigger primary alarm on.</string>
    <string name="ADD_PRIMARY_REGEX_DIALOG_MESSAGE">Enter a regular expression which Sms Alarm will trigger primary alarm on if a match of the expression is found in the received SMS.</string>
    <string name="ADD_REGEX_DIALOG_TITLE">Add regular expression</string>
    <string name="ADD_REGEX_HINT">Add regular expression..</string>
    <string name="ADD_SECONDARY_FREE_TEXT_DIALOG_MESSAGE">Enter a word which Sms Alarm will trigger secondary alarm on, if present in the received SMS.</string>
    <string name="ADD_SECONDARY_PHONE_NUMBER_DIALOG_MESSAGE">Enter a phone number which Sms Alarm will trigger secondary alarm on.</string>
    <string name="ADD_SECONDARY_REGEX_DIALOG_MESSAGE">Enter a regular expression which Sms Alarm will trigger secondary alarm on if a match of the expression is found in the received SMS.</string>
    <string name="ALARM">ALARM!</string>
    <string name="ALARM_INFO_DIALOG_TITLE">Alarm information</string>
    <string name="ALARM_SIGNAL_DIALOG_TITLE">Select alarm signal</string>
    <string name="ALARM_VIBRATION_DIALOG_TITLE">Choose vibration pattern</string>
    <string name="APPLICATION_DESCR">The Alarm application for Android&#8482;</string>
    <string name="CANCEL">Cancel</string>
    <string name="COLON">:</string>
    <string name="CONFIRM_DONATION_AMOUNT_DIALOG_MESSAGE">Are you sure you want to donate %s (excluding VAT) to the developer of Sms Alarm?</string>
    <string name="DASH">-</string>
    <string name="DONATE">Donate</string>
    <string name="DONATE_DIALOG_TITLE">Confirm donation</string>
    <string name="EDIT">Edit</string>
    <string name="EDIT_FREE_TEXT_DIALOG_TITLE">Edit word</string>
    <string name="EDIT_MESSAGE">Edit message</string>
    <string name="EDIT_ORGANIZATION">Edit organisation</string>
    <string name="EDIT_PHONE_NUMBER">Edit phone number</string>
    <string name="EDIT_PHONE_NUMBER_DIALOG_TITLE">Edit phone number</string>
    <string name="EDIT_PRIMARY_FREE_TEXT_DIALOG_MESSAGE">Edit word which Sms Alarm will trigger primary alarm on if it is found in the received SMS.</string>
    <string name="EDIT_PRIMARY_PHONE_NUMBER_DIALOG_MESSAGE">Edit phone number which Sms Alarm will trigger primary alarm on.</string>
    <string name="EDIT_PRIMARY_REGEX_DIALOG_MESSAGE">Edit regular expression which Sms Alarm will trigger primary alarm on if a match of the expression is found in the received SMS.</string>
    <string name="EDIT_REGEX_DIALOG_TITLE">Edit regular expression</string>
    <string name="EDIT_SECONDARY_FREE_TEXT_DIALOG_MESSAGE">Edit word which Sms Alarm will trigger secondary alarm on if it is found in the received SMS.</string>
    <string name="EDIT_SECONDARY_PHONE_NUMBER_DIALOG_MESSAGE">Edit phone number which Sms Alarm will trigger secondary alarm on.</string>
    <string name="EDIT_SECONDARY_REGEX_DIALOG_MESSAGE">Edit regular expression which Sms Alarm will trigger secondary alarm on if a match of the expression is found in the received SMS.</string>
    <string name="EMPTY_STRING">""</string>
    <string name="ENTER_MESSAGE_HINT">Enter message..</string>
    <string name="ENTER_ORGANIZATION_HINT">Enter organisation..</string>
    <string name="ENTER_PHONE_NUMBER_HINT">Enter phone number..</string>
    <string name="ERROR_RETRIEVING_FROM_DB">An error occurred retrieving alarm from the database. See the error log for more information.</string>
    <string name="EULA">Sms Alarm is not a substitute for pagers or other systems designed for alerting rescue personnel. The developer of Sms Alarm is not responsible for and can not be held responsible for any damages to life, property or the environment arising from the use of Sms Alarm. The developer of the Sms Alarm will also not be responsible for any damage incurred to the device in connection with the use of Sms Alarm.</string>
    <string name="EULA_AGREE">Agree</string>
    <string name="EULA_DECLINE">Decline</string>
    <string name="EULA_TITLE">User agreement</string>
    <string name="FLASH_NOTIFICATION_NOT_SUPPORTED_MIN_API_LEVEL">Flash notification is not supported because of an incompatible Android version, Gingerbread or versions later are required.</string>
    <string name="FLASH_NOTIFICATION_NOT_SUPPORTED_MISSING_BACK_FACING_CAMERA">Flash notification is not supported because the device is missing a rear camera.</string>
    <string name="FLASH_NOTIFICATION_NOT_SUPPORTED_MISSING_CAMERA">Flash notification is not supported because the device has no camera.</string>
    <string name="FLASH_NOTIFICATION_NOT_SUPPORTED_MISSING_CAMERA_FLASH">Flash notification is not supported because the device has no flash.</string>
    <string name="FREE_TEXT_DIALOG_HINT">Word..</string>
    <string name="INFO_ACKNOWLEDGE_SETTINGS">Set if acknowledgment of alarms should be used and in that case how it should be done, phone number that the acknowledgment is done to and message for acknowledgment.</string>
    <string name="INFO_APPRECIATION">Do you feel that Sms Alarm makes a difference in your life and want to show your support for the application? There are a couple of ways to do it and it does not matter how you do it, all support is appreciated!</string>
    <string name="INFO_APPRECIATION_DONATE">If you want to contribute more hands on and really show your support for future development, you are welcome to make a donation. Small or large, it does not matter, all donations are important!\nThe donation will be done by Google\'s In-app Billing. All amounts are exclusive VAT.</string>
    <string name="INFO_APPRECIATION_REVIEW">Review Sms Alarm at Google Play&#8482; and if you feel you for it, write something about it.</string>
    <string name="INFO_ENABLE_ACKNOWLEDGE">If selected primary alarm can be acknowledged.</string>
    <string name="INFO_ENABLE_SMS_ALARM">If selected, Sms Alarm will trigger alarms according to given information, else the application does not.</string>
    <string name="INFO_ENABLE_SMS_DEBUG_LOGGING">If selected, all incoming SMS\'s will be logged to the file smslog.txt in the folder SmsAlarm. The information that will be logged is time received, sender and message. Note that this feature is used mainly for debugging purposes, otherwise it should be disabled.</string>
    <string name="INFO_FREE_TEXT_SETTINGS">Set the words that Sms Alarm will trigger an alarm on if it\'s found in the incoming SMS. Note that this function is not case sensitive.</string>
    <string name="INFO_MISC_SETTINGS">Set your organisation\'s name, if the device\'s camera flash should flash upon incoming alarms, if the splash screen should be shown and if Sms Alarm should be enabled. It is also possible to enable SMS logging which can facilitate troubleshooting.</string>
    <string name="INFO_PLAY_ALARM_SIGNAL_REPEATEDLY_SETTING">If selected, the alarm signal for both primary and secondary alarms will be played repeatedly until the notification of the incoming alarm is handled.</string>
    <string name="INFO_PLAY_ALARM_SIGNAL_TWICE_SETTING">If selected Sms Alarm will play alarm signal to both primary and secondary alarms twice.</string>
    <string name="INFO_REGEX_SETTINGS">Set the regular expressions that Sms Alarm will trigger an alarm on if a match of the expression is found in the incoming SMS.</string>
    <string name="INFO_REGEX_SETTINGS_NOTE">Note. These settings are addressed to the more advanced user. Learn more about regular expressions at Wikipedia:\nwikipedia.org/wiki/Regular_expression</string>
    <string name="INFO_SHOW_SPLASH_SCREEN">If selected the splash screen will be shown.</string>
    <string name="INFO_SMS_SETTINGS">Set the telephone numbers that Sms Alarm will trigger an alarm on if the receiver of incoming SMS is the same as any set telephone number.</string>
    <string name="INFO_SOUND_SETTINGS">Set the alarm signals and vibration patterns for both primary and secondary alarms. It is also possible to set if Sms Alarm should follow the device\'s sound settings and if the alarm signal should be played twice or repeatedly.</string>
    <string name="INFO_USE_FLASH_NOTIFICATION">If selected, the device\'s camera flash will flash upon incoming alarm. Note that this is currently a BETA feature wherein unexpected behaviour can occur when an alarm is received. Use it at your own risk.</string>
    <string name="INFO_USE_OS_SOUND_SETTINGS">If selected, Sms Alarm will take the device\'s ring volume and silent mode into consideration.</string>
    <string name="LICENSE_APACHE_TITLE">Apache-Licenses</string>
    <string name="LICENSE_APACHE_V2_TITLE">Apache License, Version 2.0</string>
    <string name="LICENSE_APACHE_V2_URI">http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="LICENSE_OTHER_ACTIONBAR_SHERLOCK_TITLE">Actionbar Sherlock</string>
    <string name="LICENSE_OTHER_ACTIONBAR_SHERLOCK_URI">https://github.com/JakeWharton/ActionBarSherlock</string>
    <string name="LICENSE_OTHER_SLIDING_MENU_TITLE">Sliding Menu</string>
    <string name="LICENSE_OTHER_SLIDING_MENU_URI">https://github.com/jfeinstein10/SlidingMenu</string>
    <string name="LICENSE_OTHER_TITLE">Licenses</string>
    <string name="MENU_TITLE_ABOUT">About</string>
    <string name="REMOVE">Remove</string>
    <string name="REVIEW_NOW">Review now!(Google Play&#8482; will open)</string>
    <string name="TITLE_APPRECIATION">Show your support</string>
    <string name="TITLE_PRIMARY_ALARM">Primary alarm</string>
    <string name="TITLE_REGEX_SETTINGS">Regular expression settings</string>
    <string name="TITLE_SECONDARY_ALARM">Secondary alarm</string>
    <string name="TITLE_SMS_SETTINGS">SMS settings</string>
    <string name="ALARM_LOG_ITEM_IMAGE_DESCR">Alarm log item image</string>
    <string name="ALARM_LOG_ITEM_MESSAGE">Alarm message</string>
    <string name="ALARM_LOG_ITEM_SENDER">Alarm sender</string>
</resources>