<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/regexSettingsTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TITLE_REGEX_SETTINGS"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/regexSettingsInfo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regexSettingsTitle_tv"
            android:text="@string/INFO_REGEX_SETTINGS"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/regexPrimaryAlarmTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regexSettingsInfo_tv"
            android:layout_marginTop="5dp"
            android:text="@string/TITLE_PRIMARY_ALARM"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/primaryRegexSpinner_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regexPrimaryAlarmTitle_tv" />

        <Button
            android:id="@+id/addPrimaryRegex_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/primaryRegexSpinner_sp"
            android:text="@string/ADD" />

        <Button
            android:id="@+id/editPrimaryRegex_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/addPrimaryRegex_btn"
            android:layout_toRightOf="@id/addPrimaryRegex_btn"
            android:text="@string/EDIT" />

        <Button
            android:id="@+id/deletePrimaryRegex_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editPrimaryRegex_btn"
            android:layout_toRightOf="@id/editPrimaryRegex_btn"
            android:text="@string/REMOVE" />

        <TextView
            android:id="@+id/regexSecondaryAlarmTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addPrimaryRegex_btn"
            android:layout_marginTop="5dp"
            android:text="@string/TITLE_SECONDARY_ALARM"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/secondaryRegexSpinner_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regexSecondaryAlarmTitle_tv" />

        <Button
            android:id="@+id/addSecondaryRegex_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/secondaryRegexSpinner_sp"
            android:text="@string/ADD" />

        <Button
            android:id="@+id/editSecondaryRegex_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/addSecondaryRegex_btn"
            android:layout_toRightOf="@id/addSecondaryRegex_btn"
            android:text="@string/EDIT" />

        <Button
            android:id="@+id/deleteSecondaryRegex_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editSecondaryRegex_btn"
            android:layout_toRightOf="@id/editSecondaryRegex_btn"
            android:text="@string/REMOVE" />

        <TextView
            android:id="@+id/regexSettingsInfoNote_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addSecondaryRegex_btn"
            android:layout_marginTop="10dp"
            android:autoLink="web"
        	android:linksClickable="true"
            android:text="@string/INFO_REGEX_SETTINGS_NOTE"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>

</ScrollView>