<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

        <TextView
            android:id="@+id/smsSettingsTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TITLE_SMS_SETTINGS"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/smsSettingsInfo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/smsSettingsTitle_tv"
            android:text="@string/INFO_SMS_SETTINGS"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/smsPrimaryAlarmTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/smsSettingsInfo_tv"
            android:layout_marginTop="5dp"
            android:text="@string/TITLE_PRIMARY_ALARM"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/primarySmsNumberSpinner_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/smsPrimaryAlarmTitle_tv" />

        <Button
            android:id="@+id/addPrimarySmsNumber_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/primarySmsNumberSpinner_sp"
            android:text="@string/ADD" />

        <Button
            android:id="@+id/editPrimarySmsNumber_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/addPrimarySmsNumber_btn"
            android:layout_toRightOf="@id/addPrimarySmsNumber_btn"
            android:text="@string/EDIT" />

        <Button
            android:id="@+id/deletePrimarySmsNumber_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editPrimarySmsNumber_btn"
            android:layout_toRightOf="@id/editPrimarySmsNumber_btn"
            android:text="@string/REMOVE" />

        <TextView
            android:id="@+id/smsSecondaryAlarmTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/addPrimarySmsNumber_btn"
            android:layout_marginTop="5dp"
            android:text="@string/TITLE_SECONDARY_ALARM"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/secondarySmsNumberSpinner_sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/smsSecondaryAlarmTitle_tv" />

        <Button
            android:id="@+id/addSecondarySmsNumber_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/secondarySmsNumberSpinner_sp"
            android:text="@string/ADD" />

        <Button
            android:id="@+id/editSecondarySmsNumber_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/addSecondarySmsNumber_btn"
            android:layout_toRightOf="@id/addSecondarySmsNumber_btn"
            android:text="@string/EDIT" />

        <Button
            android:id="@+id/deleteSecondarySmsNumber_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/editSecondarySmsNumber_btn"
            android:layout_toRightOf="@id/editSecondarySmsNumber_btn"
            android:text="@string/REMOVE" />
        </RelativeLayout>
</ScrollView>