<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/appreciationTitle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TITLE_APPRECIATION"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/appreciationInfo_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appreciationTitle_tv"
            android:text="@string/INFO_APPRECIATION"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/appreciationReview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appreciationInfo_tv"
            android:text="@string/REVIEW_NOW"
            android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
</ScrollView>